--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-site",
   "description": "My personal site",
   "version": "1.0.0",
-  "author": "lcolella",
+  "author": "esvicky",
   "dependencies": {
     "gatsby": "^2.0.53",
     "gatsby-image": "^2.0.20",
